<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">AD220Lab1</string>
    
    <string name="title_activity_start">StartActivity</string>
    	<string name="btnStartContinue">Continue</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="btnMainSelect">Select</string>
	<string name="tvMainDisplayDefault">Default</string>
    
    <string name="title_activity_settings">SettingsActivity</string>
    	<string name="btnSettingsReturn">Return</string>
    	<string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="tvSettingsCircleCount">Circles per touch: #</string>
    	<string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="tvSettingsSize">Size of circles: #</string>
    	<string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="btnSettingsPlus">[+]</string>
    	<string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="btnSettingsMinus">[-]</string>
    		
    	<string-array android:layout_height="wrap_content" android:id="@+id/stringarray1" android:layout_width="wrap_content" name="spnrSettingsModeArray">
			<item android:id="@+id/CircleMode" android:layout_width="wrap_content" android:layout_height="wrap_content">Circle Mode</item>
			<item android:id="@+id/TextMode" android:layout_width="wrap_content" android:layout_height="wrap_content">Text Mode</item>
		</string-array>
    	
    <string name="title_activity_about">AboutActivity</string>
    	<string name="tvAbout">Tap the screen to spawn circles of random colors, which drift off in random directions. Shake your device to mess with them. Reorient the device to wipe the screen and start over.</string>
    
    <string name="title_activity_file_select">File Select</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="btnFSelectReturn">Return</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="btnFSelectSave">Save</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="btnFSelectLoad">Load</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="btnFSelectDelete">Delete</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="drwrFSelectHandle">Controls</string>
    <string name="btnFSelectJellyfish">Delete</string>
    <string name="teFSelectHint">Enter text here</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="teFSelectSaveHint">Name your save file here.</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="tvAboutTextHelp">Tips:<br/> close the soft keyboard to access the controls.<br/> Pay attention to what file name you have selected for saving, loading, and delete operations. There are no confirmation windows for any of them. </string>
    
    
    
    
	
	
	
	
    
</resources>